Add notes on linking modules